# anki-vibe

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
data/Vijjo/Basic_(and_reversed_card)-64013/: config.yaml  notes.yaml
data/Vijjo/Basic_(optional_reversed_card)/: config.yaml
data/Vijjo/Basic_(type_in_the_answer)/: config.yaml
data/Vijjo/Basic_Quizlet/: notes.yaml  style.css
data/Vijjo/Basic_Vocabulary/: config.yaml  lesson_01.yaml
data/Vijjo/Command_line/: config.yaml  style.css
data/Vijjo/Enhanced_Cloze_2.1_v2/: style.css
data/Vijjo/Image_Occlusion/: config.yaml
devanagari_project/: anki-vibe.toml
devanagari_project/data/: card_1_back.html  card_1_front.html  config.yaml  notes.yaml  style.css
docs/: architecture_and_workflow.md
examples/: add_devanagari_fields.py  build_devanagari_deck.py  download_devanagari_assets.py  enhance_sinhala_notes.py  enrich_devanagari.py  fix_devanagari_model.py  generate_devanagari_audio.py  generate_transliteration.py  scrape_nemo.py  scrape_nemo_direct.py  setup_sinhala_fields.py
scripts/: add_audio_fields.py  inspect_deck.py  setup_decks.py  setup_mock_data.py  standardize_audio.py  test_add_note.py  test_models.py
src/: main.py
src/adapters/: __init__.py  anki_connect.py
src/core/: __init__.py  anki_detector.py  config.py  database.py  logging_config.py  project_config.py  state_manager.py
src/models/: __init__.py  config.py  note.py
src/services/: __init__.py  init_service.py  pull_service.py  sync_service.py
src/utils/: hashing.py  text_utils.py  tts_google.py
(+56 files in other folders)
